[package]
name = "keyboard-catcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }

[dependencies.rdev]
version = "0.5.2"
features = ["unstable_grab"]
